--- a/notebooks/Primary sector/Primary sector Wind.ipynb
+++ b/notebooks/Primary sector/Primary sector Wind.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Due to excessive use of resources and climate change, the biggest challenge in human history will be the transformation of our way of living to a more considerate and mindful future. Renewable energies play a vital part in this transformation. Sources like wind, sund and water need to replace fossil materials coal and oil. Production can be improved if the plant operators are able to predict the predict natural forces and use them as efficient as possible. For this reason we will investigate different models for time series analysis of windspeed data. The dataset also contains a variety of different features. So, we want to explore if we can also predict the windspeed with classical algorithms."
+    "Due to excessive use of resources and climate change, the biggest challenge in human history will be the transformation of our way of living in a more considerate and mindful future. Renewable energies play a vital part in this transformation. Sources like wind, sun and water need to replace fossil materials. Energy production can be improved if the plant operators are able to predict the predict natural forces and use them as efficient as possible. For this reason we will investigate different models for time series analysis of windspeed data. The dataset also contains a variety of different features. So, we want to explore if we can also predict the windspeed with classical algorithms."
    ]
   },
   {
