--- a/notebooks/Primary sector/Primary sector Wind.ipynb
+++ b/notebooks/Primary sector/Primary sector Wind.ipynb
@@ -5321,7 +5321,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could not improve our settings by brute force testing other parameters. So, our best model choice remains with (0,0,1). It seems like that the ARIMA model is not the best method in our case, as it cannot improve our results of the naive baseline, although we are in the range of the feature based models. A reason for that could be that the time series data looks pretty robust and similar in the end of the series. Lets use the model on our test data."
+    "At last, we want to investigate, if there is the possibility that differencing (1st and 2nd order) will help improving our model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "  0%|          | 0/3 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Completed CV Splits (of 4): 1,2,"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 33%|███▎      | 1/3 [00:00<00:00,  2.31it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3,4,\n",
+      "Finished ARIMA((0, 0, 1), (0,0,0,0)). ME = 0.0695, MAE = 0.6325, MAPE = 36.0346, RMSE = 0.7207.\n",
+      "\n",
+      "Completed CV Splits (of 4): 1,2,"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      " 67%|██████▋   | 2/3 [00:00<00:00,  3.66it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3,4,\n",
+      "Finished ARIMA((0, 1, 1), (0,0,0,0)). ME = 0.2239, MAE = 0.8459, MAPE = 46.4093, RMSE = 1.0157.\n",
+      "\n",
+      "Completed CV Splits (of 4): 1,2,"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:01<00:00,  2.40it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3,4,\n",
+      "Finished ARIMA((0, 2, 1), (0,0,0,0)). ME = 0.2364, MAE = 0.8877, MAPE = 48.8651, RMSE = 1.0551.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "save=True\n",
+    "saveto=r'models_1/results_initialguess_arima_dif'\n",
+    "\n",
+    "order_ls = [(0,0,1),(0,1,1),(0,2,1)]\n",
+    "min_rmse = np.inf\n",
+    "results = {}\n",
+    "results['bc'] = {}\n",
+    "for order in tqdm(order_ls):\n",
+    "    me, mae, mape, rmse, preds= eval_sarima(order=order, seasonal_order=(0,0,0,0))\n",
+    "    results['bc'][order] = (me, mae, mape, rmse, preds)\n",
+    "    print('\\nFinished ARIMA({}, (0,0,0,0)). ME = {:.4f}, MAE = {:.4f}, MAPE = {:.4f}, RMSE = {:.4f}.\\n'\n",
+    "          .format(order,results['bc'][order][0],results['bc'][order][1],results['bc'][order][2],results['bc'][order][3]))\n",
+    "\n",
+    "if save:\n",
+    "    save_obj(results, '', saveto)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could not improve our settings by brute force testing other parameters and differecing orders. So, our best model choice remains with (0,0,1). It seems like that the ARIMA model is not the best method in our case, as it cannot improve our results of the naive baseline, although we are in the range of the feature based models. A reason for that could be that the time series data looks pretty robust and similar in the end of the series. Lets use the model on our test data."
    ]
   },
   {
@@ -5359,8 +5464,120 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we try to model the data using neural networks and see if those are able to capture the data."
+    "In this section, we try to model the data using neural networks that were presented in the exercise and see if those are able to capture the data. At first, we make use of the functions that were introduced in the exercise to build and evaluate a neural network."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def build_net(hidden_nodes, input_shape, seed=42, model_type='MLP'):\n",
+    "    \n",
+    "    tf.random.set_seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "    \n",
+    "    model = Sequential()\n",
+    "    \n",
+    "    if model_type=='MLP':\n",
+    "        model.add(Dense(hidden_nodes[0], input_shape=input_shape, activation='relu'))\n",
+    "        for n_nodes in hidden_nodes[1:]:\n",
+    "            model.add(Dense(n_nodes, activation='relu'))\n",
+    "    elif model_type=='LSTM':\n",
+    "        return_sequences = len(hidden_nodes)>1\n",
+    "        model.add(LSTM(hidden_nodes[0], input_shape=input_shape, return_sequences=return_sequences))\n",
+    "        if return_sequences:\n",
+    "            for n_nodes in hidden_nodes[1:-1]:\n",
+    "                model.add(LSTM(n_nodes, return_sequences=True))\n",
+    "            model.add(LSTM(hidden_nodes[-1], return_sequences=False))\n",
+    "        \n",
+    "    model.add(Dense(1))\n",
+    "    \n",
+    "    return model   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compile_net(model, lr, loss, optimizer):\n",
+    "    \n",
+    "    optimizer = tf.keras.optimizers.Adam(learning_rate=lr) if optimizer=='adam' else tf.keras.optimizers.SGD(learning_rate=lr)\n",
+    "    model.compile(loss=loss, optimizer=optimizer)\n",
+    "    \n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_net(hp, model_type, X, y, min_train_net, inverse_scaler, n_eval_net=96,\n",
+    "             n_cvs=7, verbose=0, seed=42, loss='mse', optimizer='adam'):\n",
+    "    \n",
+    "    lr, hidden_nodes, max_epochs, patience, batch_size = hp\n",
+    "    me_ls = []\n",
+    "    mae_ls = []\n",
+    "    mape_ls = []\n",
+    "    rmse_ls = []\n",
+    "    \n",
+    "    preds_stacked = np.empty(0)\n",
+    "    end_train = min_train_net\n",
+    "    input_shape = ((X.shape[1],) if model_type=='MLP' else (X.shape[1], X.shape[2]))\n",
+    "    for n_cv in tqdm(range(1, n_cvs+1)):\n",
+    "        \n",
+    "        X_train, y_train = X[:end_train], y[:end_train]\n",
+    "        X_dev, y_dev = X[end_train:end_train+n_eval_net], y[end_train:end_train+n_eval_net]\n",
+    "        \n",
+    "        model = build_net(hidden_nodes, input_shape, seed, model_type)\n",
+    "        model = compile_net(model, lr, loss, optimizer)        \n",
+    "        callback = tf.keras.callbacks.EarlyStopping(monitor='val_loss', patience=patience, restore_best_weights=True)                    \n",
+    "        history = model.fit(X_train, y_train, epochs=max_epochs, batch_size=batch_size, validation_data=(X_dev, y_dev),\n",
+    "                            verbose=verbose, shuffle=False, callbacks=[callback])\n",
+    "        \n",
+    "        # ensure rmse is computed in correct scale\n",
+    "        if inverse_scaler is not None:\n",
+    "            preds = np.maximum(0, inverse_scaler(np.append(nn_data[:n_eval_net, :-1], model(X_dev).numpy(), axis=1))[:, -1])\n",
+    "            y_dev = inverse_scaler(np.append(nn_data[:n_eval_net, :-1], y_dev.reshape(-1, 1), axis=1))[:, -1]\n",
+    "        else:\n",
+    "            preds = model(X_dev).numpy().flatten()\n",
+    "        rmse_ls.append( np.mean(y_dev-preds) \n",
+    "        rmse_ls.append( np.mean(abs(y_dev- preds)) )\n",
+    "        rmse_ls.append( np.mean( abs( y_dev[y_dev>0]-preds[y_dev>0] )/y_dev[y_dev>0] ) * 100 )\n",
+    "        rmse_ls.append( np.sqrt( np.mean( (y_dev-preds)**2 ) ) )\n",
+    "        \n",
+    "        end_train += n_eval_net\n",
+    "        \n",
+    "    weights = model.get_weights()\n",
+    "    \n",
+    "    return rmse_ls, hp, weights, model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
