--- a/notebooks/Primary sector/Primary sector crop images.ipynb
+++ b/notebooks/Primary sector/Primary sector crop images.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# Industrial Applications of Artificial Intelligence"
+    "# Industrial Applications of Artificial Intelligence - Crop Prediction"
    ]
   },
   {
