Finale Abgabe Primärer Sektor

--- a/notebooks/Primary sector/Primary sector crop images.ipynb
+++ b/notebooks/Primary sector/Primary sector crop images.ipynb
@@ -3827,13 +3827,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Exhaustive training for ResNET does not lead to improved results."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 38,
    "metadata": {},
@@ -3844,11 +3837,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exhaustive training for ResNET does not lead to improved results. Therefore, we will again load the best model from an earlier version."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#load again best model\n",
     "model = load_model(\"models_1/resnet_v3.h5\")"
    ]
   },
@@ -4428,6 +4429,7 @@
     "* As we have only a small dataset, the first possibility that comes into mind for improving the model, is clearly enhancing the dataset with more pictures to give the algorithms more material to learn.\n",
     "* Due to limited computation power on CPU and next possible step is using GPU and perform exhaustive hyperparameter tuning.\n",
     "* Use weigted ensemble methods.\n",
+    "* Include further models in ensemble methods like SVM or tree-based.\n",
     "* Increase the size of the validation set to empower the algorithm during the training phase.\n",
     "* Try further transfer learning models like Elastic Net B7.\n",
     "* Feature engineering to find features that are especially good for distiguishing rice and sugarcane from the others.\n",
