Final Glance Phase 3

--- a/notebooks/Secondary Sector/Secondary Sector Predictive Maintenance.ipynb
+++ b/notebooks/Secondary Sector/Secondary Sector Predictive Maintenance.ipynb
@@ -12831,7 +12831,8 @@
     "Outlook:\n",
     "\n",
     "- Upsampling the minority class in train data to check if it improves the result.\n",
-    "- Further tests for possible features to generate (for example brute force linear combinations of features via featuretools package)\n",
+    "- Further tests for possible features to generate (for example brute force linear combinations of features via featuretools package).\n",
+    "- Bin the features into different buckets for possible improvements.\n",
     "- Check if failure happens in a short period after predictions that have been classified as 1 mistakenly.\n",
     "- Outlier removal via e.g., standard statistics or algorithms like isolation forest to see if the results improve."
    ]
